src/ctre/bindings.rs

extern "C" {
    pub fn c_MotController_SetNeutralMode(handle: Handle, neutralMode: ::std::os::raw::c_int);
}
extern "C" {
    pub fn c_MotController_SetSensorPhase(handle: Handle, PhaseSensor: bool);
}
extern "C" {
    pub fn c_MotController_SetInverted(handle: Handle, invert: bool);
}
extern "C" {
    pub fn c_MotController_ConfigOpenLoopRamp(
        handle: Handle,
        secondsFromNeutralToFull: f64,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_ConfigClosedLoopRamp(
        handle: Handle,
        secondsFromNeutralToFull: f64,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_ConfigPeakOutputForward(
        handle: Handle,
        percentOut: f64,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_ConfigPeakOutputReverse(
        handle: Handle,
        percentOut: f64,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_ConfigNominalOutputForward(
        handle: Handle,
        percentOut: f64,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_ConfigNominalOutputReverse(
        handle: Handle,
        percentOut: f64,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_ConfigNeutralDeadband(
        handle: Handle,
        percentDeadband: f64,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_ConfigVoltageCompSaturation(
        handle: Handle,
        voltage: f64,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_ConfigVoltageMeasurementFilter(
        handle: Handle,
        filterWindowSamples: ::std::os::raw::c_int,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_EnableVoltageCompensation(handle: Handle, enable: bool);
}
extern "C" {
    pub fn c_MotController_GetBusVoltage(handle: Handle, voltage: *mut f64) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_GetMotorOutputPercent(
        handle: Handle,
        percentOutput: *mut f64,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_GetOutputCurrent(handle: Handle, current: *mut f64) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_GetTemperature(handle: Handle, temperature: *mut f64) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_ConfigSelectedFeedbackSensor(
        handle: Handle,
        feedbackDevice: ::std::os::raw::c_int,
        pidIdx: ::std::os::raw::c_int,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_ConfigSelectedFeedbackCoefficient(
        handle: Handle,
        coefficient: f64,
        pidIdx: ::std::os::raw::c_int,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_ConfigRemoteFeedbackFilter(
        handle: Handle,
        deviceID: ::std::os::raw::c_int,
        remoteSensorSource: ::std::os::raw::c_int,
        remoteOrdinal: ::std::os::raw::c_int,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_ConfigSensorTerm(
        handle: Handle,
        sensorTerm: ::std::os::raw::c_int,
        feedbackDevice: ::std::os::raw::c_int,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_GetSelectedSensorPosition(
        handle: Handle,
        param: *mut ::std::os::raw::c_int,
        pidIdx: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_GetSelectedSensorVelocity(
        handle: Handle,
        param: *mut ::std::os::raw::c_int,
        pidIdx: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_SetSelectedSensorPosition(
        handle: Handle,
        sensorPos: ::std::os::raw::c_int,
        pidIdx: ::std::os::raw::c_int,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_SetControlFramePeriod(
        handle: Handle,
        frame: ::std::os::raw::c_int,
        periodMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_SetStatusFramePeriod(
        handle: Handle,
        frame: ::std::os::raw::c_int,
        periodMs: ::std::os::raw::c_int,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_GetStatusFramePeriod(
        handle: Handle,
        frame: ::std::os::raw::c_int,
        periodMs: *mut ::std::os::raw::c_int,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_ConfigVelocityMeasurementPeriod(
        handle: Handle,
        period: ::std::os::raw::c_int,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_ConfigVelocityMeasurementWindow(
        handle: Handle,
        windowSize: ::std::os::raw::c_int,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_ConfigForwardLimitSwitchSource(
        handle: Handle,
        type_: ::std::os::raw::c_int,
        normalOpenOrClose: ::std::os::raw::c_int,
        deviceID: ::std::os::raw::c_int,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_ConfigReverseLimitSwitchSource(
        handle: Handle,
        type_: ::std::os::raw::c_int,
        normalOpenOrClose: ::std::os::raw::c_int,
        deviceID: ::std::os::raw::c_int,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_OverrideLimitSwitchesEnable(handle: Handle, enable: bool);
}
extern "C" {
    pub fn c_MotController_ConfigForwardSoftLimitThreshold(
        handle: Handle,
        forwardSensorLimit: ::std::os::raw::c_int,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_ConfigReverseSoftLimitThreshold(
        handle: Handle,
        reverseSensorLimit: ::std::os::raw::c_int,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_ConfigForwardSoftLimitEnable(
        handle: Handle,
        enable: bool,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_ConfigReverseSoftLimitEnable(
        handle: Handle,
        enable: bool,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_OverrideSoftLimitsEnable(handle: Handle, enable: bool);
}
extern "C" {
    pub fn c_MotController_Config_kP(
        handle: Handle,
        slotIdx: ::std::os::raw::c_int,
        value: f64,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_Config_kI(
        handle: Handle,
        slotIdx: ::std::os::raw::c_int,
        value: f64,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_Config_kD(
        handle: Handle,
        slotIdx: ::std::os::raw::c_int,
        value: f64,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_Config_kF(
        handle: Handle,
        slotIdx: ::std::os::raw::c_int,
        value: f64,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_Config_IntegralZone(
        handle: Handle,
        slotIdx: ::std::os::raw::c_int,
        izone: f64,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_ConfigAllowableClosedloopError(
        handle: Handle,
        slotIdx: ::std::os::raw::c_int,
        allowableClosedLoopError: ::std::os::raw::c_int,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_ConfigMaxIntegralAccumulator(
        handle: Handle,
        slotIdx: ::std::os::raw::c_int,
        iaccum: f64,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_ConfigClosedLoopPeakOutput(
        handle: Handle,
        slotIdx: ::std::os::raw::c_int,
        percentOut: f64,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_ConfigClosedLoopPeriod(
        handle: Handle,
        slotIdx: ::std::os::raw::c_int,
        loopTimeMs: ::std::os::raw::c_int,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_SetIntegralAccumulator(
        handle: Handle,
        iaccum: f64,
        pidIdx: ::std::os::raw::c_int,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_GetClosedLoopError(
        handle: Handle,
        closedLoopError: *mut ::std::os::raw::c_int,
        pidIdx: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_GetIntegralAccumulator(
        handle: Handle,
        iaccum: *mut f64,
        pidIdx: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_GetErrorDerivative(
        handle: Handle,
        derror: *mut f64,
        pidIdx: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_SelectProfileSlot(
        handle: Handle,
        slotIdx: ::std::os::raw::c_int,
        pidIdx: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_GetActiveTrajectoryPosition(
        handle: Handle,
        param: *mut ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_GetActiveTrajectoryVelocity(
        handle: Handle,
        param: *mut ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_GetActiveTrajectoryHeading(handle: Handle, param: *mut f64)
        -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_GetActiveTrajectoryAll(
        handle: Handle,
        vel: *mut ::std::os::raw::c_int,
        pos: *mut ::std::os::raw::c_int,
        heading: *mut f64,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_ConfigMotionCruiseVelocity(
        handle: Handle,
        sensorUnitsPer100ms: ::std::os::raw::c_int,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_ConfigMotionAcceleration(
        handle: Handle,
        sensorUnitsPer100msPerSec: ::std::os::raw::c_int,
        timeoutMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_ClearMotionProfileTrajectories(handle: Handle) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_GetMotionProfileTopLevelBufferCount(
        handle: Handle,
        value: *mut ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_PushMotionProfileTrajectory(
        handle: Handle,
        position: f64,
        velocity: f64,
        headingDeg: f64,
        profileSlotSelect: ::std::os::raw::c_int,
        isLastPoint: bool,
        zeroPos: bool,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_PushMotionProfileTrajectory_2(
        handle: Handle,
        position: f64,
        velocity: f64,
        headingDeg: f64,
        profileSlotSelect0: ::std::os::raw::c_int,
        profileSlotSelect1: ::std::os::raw::c_int,
        isLastPoint: bool,
        zeroPos: bool,
        durationMs: ::std::os::raw::c_int,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_IsMotionProfileTopLevelBufferFull(
        handle: Handle,
        value: *mut bool,
    ) -> ErrorCode;
}
extern "C" {
    pub fn c_MotController_ProcessMotionProfileBuffer(handle: Handle) -> ErrorCode;
}
